# egui_joplin_fzf

./: .gitignore  Cargo.toml  LICENCE  Readme.md
src/: bm25.rs  cli.rs  list.rs  main.rs  note.rs  ui.rs
