[package]
name = "egui_list"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.30.0", features = ["__screenshot"] }
egui_extras = { version = "0.30.0", features = ["default", "image"] }
env_logger = {version= "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
chrono = "0.4"
rand = "0.8.5"
ordered-float = "4.6.0"
egui_demo_lib = "0.30.0"
unindent = "0.2.3"
clap = { version = "4.5.27", features = ["derive"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }

[[bin]]
name = "egui_list"
path = "src/main.rs"
